<resources>
    <string name="app_name">InternetTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    // fragment inuptdata
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_no">Account No</string>
    <string name="usage">Usage</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    //menu items
    <string name="input_data">Input Data</string>
    <string name="search_data">Search User</string>
    <string name="usage_coast">Usage Coast</string>
    <string name="higest_usage">Highest Usage</string>
    <string name="lowest_usage">Lowest Usage</string>
    <string name="sort">Sort users</string>
    <string name="exit">Exit</string>





</resources>
